增加学习链接